# KittyMoeii

./: .gitignore  debug-rtsp-black-screen.md  debug-rtsp-no-video.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/haohanyh/car_2026_kittymoeii/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: traffic_sign_100ep_float16.tflite  traffic_sign_label_list.txt
app/src/main/cpp/: Android.mk  Application.mk  CMakeLists.txt  ffmpeg_rtsp_player.cpp
app/src/main/java/com/haohanyh/car_2026_kittymoeii/: MainActivity.java
app/src/main/java/com/haohanyh/car_2026_kittymoeii/Camera/: CameraControlByTCPClient.java  CameraSearchByUDPClient.java  CameraSearchIP.java  CameraVideoByRtsp.java
app/src/main/java/com/haohanyh/car_2026_kittymoeii/Car/: CarCommandBySocket.java  CarControlNeedSpeedAndEncoder.java  CarIPBean.java  CarLink.java  CarState.java
app/src/main/java/com/haohanyh/car_2026_kittymoeii/trafficsign/: AssetUtils.java  DemoModelConfig.java  DetectionOverlayView.java  ImageUtils.java  InferenceModels.java  TrafficSignActivity.java  TrafficSignCandidateDetector.java  TrafficSignRecognizer.java
app/src/main/res/drawable/: home_header_bg.xml
app/src/main/res/layout/: activity_main.xml  activity_traffic_sign.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/haohanyh/car_2026_kittymoeii/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
